Fixed keyboard display issue on mobile

--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -10,7 +10,7 @@
   position: relative;
   bottom: 0px;
   align-self: center;
-  width: 60%;
+  width: 100%;
   padding: 5px 0;
   background: transparent;
   user-select: none;
@@ -21,10 +21,10 @@
 }
 
 .keyboard_key {
-  height: 45px;
-  width: 6%;
-  max-width: 90px;
-  margin: 3px;
+  height: 40px;
+  width: 7.5%;
+  max-width: 50px;
+  margin: 2px;
   border-radius: 4px;
   border: none;
   background: #cfcccc;
@@ -41,11 +41,12 @@
   position: relative;
 }
 
+/* pale purple-ish gray */
 .keyboard_key_gray {
-  height: 45px;
-  width: 6%;
-  max-width: 90px;
-  margin: 3px;
+  height: 40px;
+  width: 7.5%;
+  max-width: 50px;
+  margin: 2px;
   border-radius: 4px;
   border: none;
   background: #b5afbc;
@@ -62,12 +63,12 @@
   position: relative;
 }
 
-
+/* pale purple  */
 .keyboard_key_yellow {
-  height: 45px;
-  width: 6%;
-  max-width: 90px;
-  margin: 3px;
+  height: 40px;
+  width: 7.5%;
+  max-width: 50px;
+  margin: 2px;
   border-radius: 4px;
   border: none;
   /* background: #EBE960; */
@@ -85,11 +86,12 @@
   position: relative;
 }
 
+/* light blue */
 .keyboard_key_green {
-  height: 45px;
-  width: 6%;
-  max-width: 90px;
-  margin: 3px;
+  height: 40px;
+  width: 7.5%;
+  max-width: 50px;
+  margin: 2px;
   border-radius: 4px;
   border: none;
   background:#a9def9;
